--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,9 @@ jobs:
         with:
           activate-environment: environment
           environment-file: environment.yml
-      - run:  pycodestyle $(git ls-files "*.py")
+      - run:  
+          cd /source_dir/
+          pycodestyle $(git ls-files "*.py")
       
   unit_tests:
     runs-on: ubuntu-latest
@@ -32,4 +34,5 @@ jobs:
           activeate-environment: environment
           environment-file: environment.yml
       - run:
+          cd /source_dir/
           python -m unittest test_data_utils
