--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with: 
-          activeate-environment: environment
+          activate-environment: environment
           environment-file: environment.yml
       - run:
           cd /source_dir/
